about-me; fixed css; minor spacing issue fixed

--- a/src/PortfolioContainer/AboutMe/AboutMe.css
+++ b/src/PortfolioContainer/AboutMe/AboutMe.css
@@ -34,8 +34,12 @@
 .about-me-description {
   font-size: 15px;
 }
+
+.about-me-description span {
+  margin: 0 0 90px 0;
+}
 .about-me-highlights {
-  margin: 80px 0;
+  margin: 80px auto;
   font-size: 20px;
 }
 .highlight-heading {
@@ -56,8 +60,12 @@
   background-color: #ff5823;
   border-radius: 50%;
 }
+.about-me-options {
+  margin: 30px 0;
+}
+
 .about-me-options .highlighted-btn {
-  margin: 0 0 0 30px;
+  margin: 0 30px 0 30px;
 }
 
 /*IPAD PRO RESPONSIVENESS*/
